--- a/css/style.css
+++ b/css/style.css
@@ -1,378 +1,343 @@
-        /*reset*/
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+.nav_bar {
+  background-color: #001F54;
+  color: #1282A2;
 }
 
-/*MAIN*/
-.main{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
+.button_bootstrap {
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  text-align: right;
+  align-items: right;
 }
 
-.main_portfolio{
-    text-align: center;
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
 
+.main_portfolio {
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 }
-.title{
-    margin-top: 50px;
-    align-items: center;
-    color: #88BFCF;
-    font-size: 4em;
-    font-weight: bold;
-}
-.color_gold{
-    color: #1282A2;
-}
-.parrafo{
-    font-size: 1.5em;
-    padding: 25px;
-    color: #FEFCFB;
-}
-.parrafo span{
-    font-size: 1.2em;
-    font-weight: bold;
-    color: #88BFCF;
-}
-.sectionInd h2{
-    font-size: 2em;
-    font-weight: bold;
-    color: #88BFCF;
-    margin: 30px;
-}
-.sectionInd a{
-    font-size: 2em;
-    text-decoration: none;
-}
-/*INDEX*/
 
-.body_index{
+.title {
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  color: #88BFCF;
+  margin-top: 50px;
+  font-weight: bold;
+  font-size: 4em;
+}
+
+.redes_block {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.redes_block a img {
+  width: 40px;
+  height: 40px;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+footer section h5 {
+  color: #FEFCFB;
+  padding: 10px;
+  font-size: 1em;
+}
+
+.logo_img {
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  width: 15em;
+  height: 15em;
+  border-radius: 150px;
+  padding: 30px;
+}
+
+.sectionInd article {
+  font-size: 2em;
+}
+.sectionInd article h2 {
+  font-weight: bold;
+  color: #88BFCF;
+}
+.sectionInd article a {
+  text-decoration: none;
+}
+
+.parrafo {
+  font-size: 1.5em;
+  padding: 25px;
+  color: #FEFCFB;
+}
+.parrafo span {
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #88BFCF;
+}
+
+.contact_index {
+  padding-bottom: 40;
+}
+
+.contact_title {
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  margin-top: 50px;
+  color: #88BFCF;
+  font-size: 3.5em;
+  font-weight: bold;
+}
+
+.contact_form {
+  justify-content: left;
+  text-align: left;
+  align-items: left;
+  background-color: #1282A2;
+  color: #FEFCFB;
+  border-radius: 20px;
+  padding-left: 20px;
+  padding-bottom: 30px;
+}
+.contact_form div label {
+  font-size: 1.5em;
+}
+.contact_form textarea {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 90%;
+}
+
+.input_form input {
+  width: 90%;
+  padding-right: 50px;
+  height: 40px;
+}
+
+.resume_list {
+  list-style: none;
+}
+.resume_list li {
+  font-size: 2em;
+}
+
+.resume_main section h2 {
+  font-size: 3.5em;
+}
+.resume_main section ul li div {
+  font-weight: light;
+  font-size: 1em;
+}
+.resume_main section ul li section {
+  font-size: 1.5em;
+}
+
+.main_portfolio {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.img_portfolio div img {
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  width: 11em;
+  height: 11em;
+  margin: 10px;
+}
+
+.img_carousel {
+  width: 1000px;
+  height: 1000px;
+}
+
+.cards_port {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  gap: 1em;
+  margin: 10px;
+}
+.cards_port div div {
+  background-color: #001F54;
+  color: #FEFCFB;
+}
+
+.accordeon_items {
+  margin: 10px;
+}
+.accordeon_items div {
+  color: #FEFCFB;
+  background-color: #001F54;
+}
+.accordeon_items div div {
+  color: #FEFCFB;
+  background-color: #001F54;
+  border-color: #0A1128;
+}
+.accordeon_items div h2 {
+  color: #FEFCFB;
+  background-color: #001F54;
+}
+.accordeon_items div button {
+  color: #FEFCFB;
+  background-color: #001F54;
+  border-color: #0A1128;
+}
+.accordeon_items div button:active {
+  color: #FEFCFB;
+  background-color: #034078;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+header {
+  background-color: #001F54;
+  grid-area: header;
+}
+
+main {
+  background-color: #034078;
+  grid-area: main;
+}
+
+footer {
+  background-color: #0A1128;
+  grid-area: footer;
+}
+
+.body_index {
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 8% 200% 20%;
+  /*estructura con areas*/
+  grid-template-areas: "header header" "main main" "footer footer";
+}
+
+.body_qs {
+  height: 100vh;
+  display: grid;
+  display: grid;
+  grid-template-rows: 8% 430% 20%;
+  /*estructura con areas*/
+  grid-template-areas: "header header" "main main" "footer footer";
+}
+
+@media screen and (min-width: 600px) {
+  .body_index {
     height: 200vh;
+    grid-template-columns: 4% 110% 10%;
+  }
+  .body_qs img {
+    width: 25em;
+    height: 25em;
+    border-radius: 80px;
+  }
+  .img_portfolio div img {
+    width: 12em;
+    height: 12em;
+  }
+  .title {
+    font-size: 5em;
+  }
+  .parrafo {
+    padding: 50px;
+    font-size: 2em;
+  }
+  .sectionInd h2 {
+    margin: 30px;
+    font-size: 2.5em;
+  }
+  .sectionInd a {
+    font-size: 2.5em;
+  }
+  .body_qs {
+    grid-template-rows: 8% 480% 19%;
+  }
+  .body_qs img {
+    width: 18em;
+    height: 18em;
+    border-radius: 190px;
+  }
+  .footer {
     display: grid;
-    grid-template-rows: 4% 100% 10%;
-    
+    grid-template-rows: 0 0 0;
     /*estructura con areas*/
-    grid-template-areas: 
-    "header header" 
-    "main main" 
-    "footer footer";
-}
-
-.contact_index{
-    padding-bottom: 40px;
-}
-
-/*QUIEN SOY*/
-.body_qs{
-    height: 100vh;
-    display: grid;
-    grid-template-rows: 8% 430% 19%;
-    
-    /*estructura con areas*/
-    grid-template-areas: 
-    "header header" 
-    "main main" 
-    "footer footer";
+    grid-template-areas: "header header" "main main" "footer footer";
     justify-content: center;
-}
-.logo_img{
-    width: 15em;
-    height: 15em;
-    justify-self: center;
-    border-radius: 150px;
-    align-items:center;
-    padding: 30px;
-    
-}
-/*PORTFOLIO*/
-
-.main_portfolio{
+    text-align: center;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+  }
+  .redes_block {
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+  .cards_port {
     display: flex;
-    flex-direction: column;
-    gap:15px;
-}
-.img_portfolio div img{
-    width: 11em;
-    height: 11em;
-    justify-self: center;
-    margin: 10px;
-}
-.img_carousel{
-    width:1000px;
-    height:1000px;
-}
-.cards_port{
-    display: flex;
+    flex-direction: row;
+    flex-direction: row;
     gap: 1em;
     margin: 10px;
-
-    align-self: center;
-    text-align: center;
-    flex-direction: column;
-}
-
-.cards_port div div{
-    background-color: #001F54;
-    color: #FEFCFB;
-    border-color: #0A1128;
-
-}
-.accordeon_items div h2{
-    background-color: #001F54;
-    color:#FEFCFB
-}
-.accordeon_items div button{
-    background-color: #001F54;
-    color:#FEFCFB;
-    border-color: #0A1128;
-    
-}
-.accordeon_items div button :active{
-    background-color: #034078;
-    color:#FEFCFB
-}
-.accordeon_items div{
-    background-color: #001F54;
-    color:#FEFCFB;
-    
-}
-.accordeon_items{
-    margin: 10px;
-    
-}
-
-
-/*REDES*/
-
-.redes_block{
-    display: flex;
-    align-items: center;
-    gap: 20px;
     justify-content: center;
-    margin-bottom: 20px;
+    align-self: auto;
+  }
 }
-.redes_block a img{
-    width: 40px;
-    height: 40px;
-}
-.redes_block div a{
-    padding-left: 10px;
+@media screen and (min-width: 1240px) {
+  .img_portfolio div img {
+    justify-content: center;
     text-align: center;
-}
-
-/*CONTACTO*/
-.contact_title{
-    margin-top: 50px;
-    margin-bottom: 20px;
     align-items: center;
-    color: #88BFCF;
-    font-size: 3.5em;
-    font-weight: bold;
-    
-}
-.contact_form{
-    background-color: #1282A2;
-    color: #FEFCFB;
-    justify-content: left;
-    border-radius: 20px;
-    align-items: left;
-    text-align: left;
-    padding-left: 20px;
-    padding-bottom: 30px;
-    margin:30px;
-}
-.contact_form div label{
-    font-size: 1.5em;
-}
-.contact_form textarea{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    width: 90%;
-
-}
-.input_form input{
-    width: 90%;
-    padding-right: 50px;
-    height: 40px;
-}
-.contact_left{
-    justify-content: left;
-}
-/*RESUME*/
-.resume_list{
-    list-style: none;
-    
-}
-.resume_list li{
+    width: 15em;
+    height: 15em;
+    margin-left: 20px;
+  }
+  .title {
+    font-size: 7em;
+  }
+  .parrafo {
     font-size: 2em;
-}
-.resume_main{
-    background-color: #1282A2;
-    color: #FEFCFB;
-    padding-left: 1em;
-    padding-right: 1em;
-    margin: 30px;
-    text-align:left;
-    border-radius: 20px;
-}
-.resume_main section h2{
+    padding: 80px;
+  }
+  .sectionInd h2 {
     font-size: 3em;
-}
-.resume_main section ul li div{
-    font-size: 0.8em;
-    font-weight: light;
-}
-.resume_main section ul li section{
-    font-size: 1.3em;
-}
-
-/*BARRA DE NAVEGACION*/
-.button_bootstrap{
-    display: flex;
-    flex-direction: column;
-    text-align: right;
-}
-.nav_bar{
-    background-color: #001F54;
-    color: #1282A2;
-
+    margin: 50px;
+  }
+  .sectionInd a {
+    font-size: 3em;
+  }
+  .body_qs {
+    grid-template-rows: 8% 400% 19%;
+  }
+  .body_qs img {
+    width: 20em;
+    height: 20em;
+    border-radius: 200px;
+  }
 }
 
-/*footer*/
-.footer section h5{
-    color: #FEFCFB;
-    font-size: 1em;
-    text-align:center;
-    padding: 10px;
-    
-}
-
-.footer{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-header{
-    background-color: #001F54;
-    grid-area: header;
-}
-main{
-    background-color: #034078;
-    grid-area: main;
-}
-footer{
-    background-color: #0A1128;
-    grid-area: footer;
-}
-/*MEDIA QUERIE*/
-
-/*mq tablet*/
-@media screen and (min-width:600px){
-    .body_index{
-        height: 200vh;
-        grid-template-rows: 4% 110% 10%;
-    }
-    .body_qs img{
-        width: 25em;
-        height: 25em;
-        justify-self: center;
-        border-radius: 80px;
-        align-items:center;
-        
-    }
-    .img_portfolio div img{
-        width: 12em;
-        height: 12em;
-        align-self:center;
-        justify-self: center;
-    }
-    .img_maradona{
-        grid-column: span 1;
-        margin-bottom: 0px;
-    }
-    .title{
-        font-size: 5em;
-    }
-    .parrafo{
-        font-size: 1.7em;
-        padding: 50px;
-    }
-    .sectionInd h2{
-        font-size: 2.5em;
-        margin: 30px;
-    }
-    .sectionInd a{
-        font-size: 2.5em;
-    }
-    .body_qs{
-        grid-template-rows: 8% 480% 19%;
-    }
-    .body_qs img{
-        width: 18em;
-        height: 18em;
-        border-radius: 190px;
-    }
-    .footer{
-        display: grid;
-        align-items: center;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
-        justify-content: center;
-    }
-    .redes_block{
-        margin-bottom: 20px;
-        margin-top: 20px;
-    }
-    .cards_port{
-        display: flex;
-        flex-direction: row;
-        gap: 1em;
-        margin: 10px;
-        justify-content: center;
-        align-self:auto;
-    }
-}
-
-@media screen and (min-width:1240px){
-    .img_portfolio div img{
-        width: 15em;
-        height: 15em;
-        margin-left: 20px;
-        align-items:center;
-        justify-content: center;
-    }
-    .img_bamboo{
-        grid-column: span 2;
-        align-items: center;
-    }
-    .title{
-        font-size: 7em;
-    }
-    .parrafo{
-        font-size: 1.8em;
-        padding: 80px;
-    }
-    .sectionInd h2{
-        font-size: 3em;
-        margin: 50px;
-    }
-    .sectionInd a{
-        font-size: 3em;
-    }
-    .body_qs{
-        grid-template-rows: 8% 400% 19%;
-    }
-    .body_qs img{
-        width: 20em;
-        height: 20em;
-        border-radius: 200px;
-    }
-}
-
-.hide_until_finish{
-    display: hidden;
-}
+/*# sourceMappingURL=style.css.map */
