--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -2,15 +2,15 @@
 
 .main{
     @include display_flex(column);
-    @include align(center);
+    
 }
 .main_portfolio{
     @include align(center);
 }
 .title{
-    @include align(center);
+    text-align: center;
     color: $celeste-primario;
-    margin-top: 50px;
     font-weight: bold;
     font-size: $bigger;
+    margin-top: 50px;
 }
