--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -5,7 +5,7 @@
     @include align(center);
     margin-top: 50px;
     color: $celeste-primario;
-    font-size:$big;
+    font-size:$high;
     font-weight: bold;
 }
 .contact_form{
