--- a/css/style.css
+++ b/css/style.css
@@ -52,10 +52,9 @@
   margin-bottom: 20px;
 }
 .redes_block a img {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   transition: 0.3s;
-  cursor: pointer;
 }
 
 footer {
@@ -64,6 +63,7 @@ footer {
   justify-content: center;
   text-align: center;
   align-items: center;
+  gap: 20px;
 }
 footer div h2 {
   color: #FEFCFB;
@@ -79,6 +79,25 @@ footer div h3 {
 .redes_block a img:hover {
   transform: scale(1.2);
   transition: 0.3s;
+}
+
+.libr_pages {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  font-size: 0.7em;
+  gap: 10px;
+  padding-bottom: 20px;
+}
+.libr_pages a {
+  text-decoration: none;
+  color: #75a0da;
+}
+.libr_pages a:hover {
+  text-decoration: none;
+  color: #597aa5;
 }
 
 .section_ind {
@@ -297,7 +316,7 @@ footer div h3 {
 }
 
 header {
-  background-image: linear-gradient(to left, #00263C, #004570);
+  background-image: linear-gradient(to left, #00263C, #012f49);
   grid-area: header;
 }
 
@@ -313,7 +332,7 @@ footer {
 
 .body_index {
   display: grid;
-  grid-template-rows: 0.5fr 20fr 2fr;
+  grid-template-rows: 0.2fr 6fr 1fr;
   /*estructura con areas*/
   grid-template-areas: "header header" "main main" "footer footer";
 }
@@ -339,7 +358,7 @@ footer {
 
 @media screen and (min-width: 600px) {
   .body_index {
-    grid-template-rows: 0.3fr 9fr 0.7fr;
+    grid-template-rows: 0.2fr 6fr 0.8fr;
   }
   .body_qs main div img {
     width: 25em;
@@ -367,11 +386,6 @@ footer {
   .section_ind a {
     font-size: 1.2em;
   }
-  .footer {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-  }
   .footer div {
     justify-content: center;
     text-align: center;
@@ -380,6 +394,10 @@ footer {
   .redes_block {
     margin-bottom: 20px;
     margin-top: 20px;
+  }
+  .redes_block a img {
+    width: 40px;
+    height: 40px;
   }
   .cards_port {
     display: grid;
@@ -393,6 +411,11 @@ footer {
   }
   .button_inputs {
     transform: scale(1.3);
+  }
+  .libr_pages {
+    font-size: 1em;
+    padding-bottom: 40px;
+    gap: 30px;
   }
 }
 @media screen and (min-width: 1240px) {
@@ -429,17 +452,25 @@ footer {
     border-radius: 80px;
   }
   .footer {
+    display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr 1fr;
   }
   .cards_port {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
   .body_index {
-    grid-template-rows: 0.3fr 9fr 1fr;
+    grid-template-rows: 0.3fr 5fr 1fr;
   }
   .button_inputs {
     transform: scale(1.4);
+  }
+  .redes_block a img {
+    width: 50px;
+    height: 50px;
+  }
+  .libr_pages {
+    grid-column: span 2;
   }
 }
 
