mobile responsive fix in resume

--- a/scss/pages/_resume.scss
+++ b/scss/pages/_resume.scss
@@ -22,7 +22,7 @@
     
     section{
         h2{
-            font-size: $big;
+            font-size: $medium2;
         }
         ul{
             li{
